--- a/code/grc/CMakeLists.txt
+++ b/code/grc/CMakeLists.txt
@@ -45,5 +45,6 @@ install(FILES
     lte_cp_time_freq_sync_cc.xml
     lte_cell_id_daemon.xml
     lte_linear_OFDM_estimator_hier_vcvc.xml
-    lte_zadoff_chu_seq_generator_vc.xml DESTINATION share/gnuradio/grc/blocks
+    lte_zadoff_chu_seq_generator_vc.xml
+    lte_remove_cp2_cvc.xml DESTINATION share/gnuradio/grc/blocks
 )
