new QA tests integrated

--- a/code/grc/CMakeLists.txt
+++ b/code/grc/CMakeLists.txt
@@ -50,5 +50,7 @@ install(FILES
     lte_sss_calc2_vc.xml
     lte_sss_tagging2_vcvc.xml
     lte_hier_sss_sync2_vcvc.xml
-    lte_channel_estimator.xml DESTINATION share/gnuradio/grc/blocks
+    lte_channel_estimator.xml
+    lte_decode_bch_vfvb.xml
+    lte_decode_pbch_vcvf.xml DESTINATION share/gnuradio/grc/blocks
 )
