--- a/code/grc/CMakeLists.txt
+++ b/code/grc/CMakeLists.txt
@@ -51,5 +51,6 @@ install(FILES
     lte_sss_tagging2_vcvc.xml
     lte_hier_sss_sync2_vcvc.xml
     lte_channel_estimator.xml
-    lte_decode_bch_vfvb.xml DESTINATION share/gnuradio/grc/blocks
+    lte_decode_bch_vfvb.xml
+    lte_decode_pbch_vcvf.xml DESTINATION share/gnuradio/grc/blocks
 )
