started pcfich descrambler

--- a/code/include/CMakeLists.txt
+++ b/code/include/CMakeLists.txt
@@ -45,5 +45,6 @@ install(FILES
     lte_pss_tagging_cc.h
     lte_cp_time_freq_sync_cc.h
     lte_zadoff_chu_seq_generator_vc.h
-    lte_channel_estimator_vcvc.h DESTINATION include/lte
+    lte_channel_estimator_vcvc.h
+    lte_pcfich_descrambler_vfvf.h DESTINATION include/lte
 )
