--- a/code/grc/CMakeLists.txt
+++ b/code/grc/CMakeLists.txt
@@ -46,5 +46,6 @@ install(FILES
     lte_decode_bch_vfvb.xml
     lte_decode_pbch_vcvf.xml
     lte_channel_estimator_vcvc.xml
-    lte_estimator_parameterizer_msg.xml DESTINATION share/gnuradio/grc/blocks
+    lte_estimator_parameterizer_msg.xml
+    lte_pcfich_descrambler_vfvf.xml DESTINATION share/gnuradio/grc/blocks
 )
