--- a/code/include/CMakeLists.txt
+++ b/code/include/CMakeLists.txt
@@ -48,5 +48,6 @@ install(FILES
     lte_channel_estimator_vcvc.h
     lte_pcfich_descrambler_vfvf.h
     lte_cfi_unpack_vf.h
-    lte_pcfich_demux_vcvc.h DESTINATION include/lte
+    lte_pcfich_demux_vcvc.h
+    lte_descrambler_vfvf.h DESTINATION include/lte
 )
