--- a/code/grc/CMakeLists.txt
+++ b/code/grc/CMakeLists.txt
@@ -51,5 +51,6 @@ install(FILES
     lte_cfi_unpack_vf.xml
     lte_pcfich_demux_vcvc.xml
     lte_decode_pcfich_vcm.xml
-    lte_descrambler_vfvf.xml DESTINATION share/gnuradio/grc/blocks
+    lte_descrambler_vfvf.xml
+    lte_decode_pdcch_vcvf.xml DESTINATION share/gnuradio/grc/blocks
 )
