moved channel estimator to 3.7

--- a/gr37-lte/grc/CMakeLists.txt
+++ b/gr37-lte/grc/CMakeLists.txt
@@ -28,5 +28,6 @@ install(FILES
     lte_qpsk_soft_demod_vcvf.xml
     lte_layer_demapper_vcvc.xml
     lte_pre_decoder_vcvc.xml
-    lte_pbch_demux_vcvc.xml DESTINATION share/gnuradio/grc/blocks
+    lte_pbch_demux_vcvc.xml
+    lte_channel_estimator_vcvc.xml DESTINATION share/gnuradio/grc/blocks
 )
