moved sss_calculator to 3.7

--- a/gr37-lte/grc/CMakeLists.txt
+++ b/gr37-lte/grc/CMakeLists.txt
@@ -32,5 +32,6 @@ install(FILES
     lte_channel_estimator_vcvc.xml
     lte_rs_map_generator_m.xml
     lte_extract_subcarriers_vcvc.xml
-    lte_remove_cp_cvc.xml DESTINATION share/gnuradio/grc/blocks
+    lte_remove_cp_cvc.xml
+    lte_sss_calculator_vcm.xml DESTINATION share/gnuradio/grc/blocks
 )
