--- a/gr37-lte/lib/CMakeLists.txt
+++ b/gr37-lte/lib/CMakeLists.txt
@@ -38,6 +38,7 @@ list(APPEND lte_sources
     channel_estimator_vcvc_impl.cc
     extract_subcarriers_vcvc_impl.cc
     remove_cp_cvc_impl.cc
+    sss_calculator_vcm_impl.cc
 )
 SET(FFTW3f /usr/lib/x86_64-linux-gnu/libfftw3f.so) # This is an ugly hack!
 add_library(gnuradio-lte SHARED ${lte_sources})
