added common descrambler for physical channels

--- a/gr37-lte/include/lte/CMakeLists.txt
+++ b/gr37-lte/include/lte/CMakeLists.txt
@@ -44,5 +44,6 @@ install(FILES
     correlator.h
     sss_symbol_selector_cvc.h
     sss_tagger_cc.h
-    sync_frequency_c.h DESTINATION include/lte
+    sync_frequency_c.h
+    descrambler_vfvf.h DESTINATION include/lte
 )
