--- a/gr37-lte/grc/CMakeLists.txt
+++ b/gr37-lte/grc/CMakeLists.txt
@@ -43,5 +43,6 @@ install(FILES
     lte_sss_symbol_selector_cvc.xml
     lte_sss_tagger_cc.xml
     lte_sync_cc.xml
-    lte_sync_frequency_c.xml DESTINATION share/gnuradio/grc/blocks
+    lte_sync_frequency_c.xml
+    lte_descrambler_vfvf.xml DESTINATION share/gnuradio/grc/blocks
 )
