--- a/gr37-lte/python/CMakeLists.txt
+++ b/gr37-lte/python/CMakeLists.txt
@@ -35,7 +35,8 @@ GR_PYTHON_INSTALL(
     bch_viterbi_vfvb.py
     pbch_scramble_sequencer_m.py
     rs_map_generator_m.py
-    sync_cc.py DESTINATION ${GR_PYTHON_DIR}/lte
+    sync_cc.py
+    pcfich_scramble_sequencer_m.py DESTINATION ${GR_PYTHON_DIR}/lte
 )
 
 ########################################################################
@@ -72,3 +73,4 @@ GR_ADD_TEST(qa_sss_tagger_cc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa
 GR_ADD_TEST(qa_sync_cc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sync_cc.py)
 GR_ADD_TEST(qa_sync_frequency_c ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sync_frequency_c.py)
 GR_ADD_TEST(qa_descrambler_vfvf ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_descrambler_vfvf.py)
+GR_ADD_TEST(qa_pcfich_scramble_sequencer_m ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_pcfich_scramble_sequencer_m.py)
