added pcfich demux

--- a/gr37-lte/include/lte/CMakeLists.txt
+++ b/gr37-lte/include/lte/CMakeLists.txt
@@ -45,5 +45,6 @@ install(FILES
     sss_symbol_selector_cvc.h
     sss_tagger_cc.h
     sync_frequency_c.h
-    descrambler_vfvf.h DESTINATION include/lte
+    descrambler_vfvf.h
+    pcfich_demux_vcvc.h DESTINATION include/lte
 )
