--- a/gr37-lte/lib/CMakeLists.txt
+++ b/gr37-lte/lib/CMakeLists.txt
@@ -49,6 +49,7 @@ list(APPEND lte_sources
     sss_tagger_cc_impl.cc
     sync_frequency_c_impl.cc
     descrambler_vfvf_impl.cc
+    pcfich_demux_vcvc_impl.cc
 )
 
 add_library(gnuradio-lte SHARED ${lte_sources})
