--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -45,5 +45,7 @@ install(FILES
     lte_descrambler_vfvf.xml
     lte_pcfich_scramble_sequencer_m.xml
     lte_pcfich_demux_vcvc.xml
-    lte_mimo_pss_coarse_sync.xml DESTINATION share/gnuradio/grc/blocks
+    lte_mimo_pss_coarse_sync.xml
+    lte_mimo_pss_fine_sync.xml
+    lte_mimo_pss_helper.xml DESTINATION share/gnuradio/grc/blocks
 )
