start pss fine sync

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -46,6 +46,7 @@ install(FILES
     lte_pcfich_scramble_sequencer_m.xml
     lte_pcfich_demux_vcvc.xml
     lte_mimo_pss_coarse_sync.xml
-    lte_mimo_pss_fine_sync.xml
-    lte_mimo_pss_helper.xml DESTINATION share/gnuradio/grc/blocks
+    lte_mimo_pss_fine_sync.xml  DESTINATION share/gnuradio/grc/blocks
+    
+   
 )
